<resources>
    <string name="app_name">Trương Quang Tuấn (1910152) </string>
    <string name="app_fullname">Họ và tên</string>
    <string name="app_x">Giá trị X</string>
    <string name="app_Y">Giá trị Y</string>
    <string name="app_Z">Giá trị Z</string>
    <string name="app_clear">Xóa trắng</string>
    <string name="app_value">NHẬP GIÁ TRỊ </string>
    <string name="app_back">Quay lại</string>
    <string name="app_exp">Phép lũy thừa</string>
    <string name="app_mul">Phép nhân</string>
    <string name="app_plus">Phép cộng</string>
    <string name="app_ok">Đồng ý</string>
    <string name="app_result">Kết quả tính toán</string>
</resources>