<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/app_value"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_fullname"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_x"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_Y"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_Z"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ho_va_ten"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="25dp"/>
            <EditText
                android:id="@+id/gtX"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/gtY"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/gtZ"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"/>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ho_ten"
            android:background="@drawable/custom_button"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/app_fullname"
            android:textColor="@color/white"/>


        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/custom_button"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:text="@string/app_ok"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/xoa"
            android:background="@drawable/custom_button"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:text="@string/app_clear"/>

    </LinearLayout>

</LinearLayout>